# stow

./: .coveralls.yml  .cvsignore  .dir-locals.el  .dumbjump  .editorconfig  .gitignore  .travis.yml  AGENTS.md  AUTHORS  Build.PL  CONTRIBUTING.md  ChangeLog  INSTALL  INSTALL.md  MANIFEST  MANIFEST.SKIP  META.json  META.yml  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  Stow.pm  THANKS  TODO  aclocal.m4  autogen.sh  build-docker.sh  chkstow.in  config.status  configure  configure.ac  configure.in  default-ignore-list  stamp-vti  stow  stow.8  stow.in  (+5 more)
.claude/: settings.json
.github/workflows/: test.yml
automake/: .gitignore
debian/: README.Debian  README.source  changelog  control  copyright  doc-base  docs  info  rules
debian/patches/: 01_makefile_install-info.patch  02_gpl2_file_reference.patch
doc/: HOWTO-RELEASE  stow.8  stow.texi  texinfo.tex
docker/: Dockerfile  bootstrap-perls.sh  run-stow-tests.sh
experimental/: README  gnu-install  gnu-sql  gnu.db  sql-gnu-populate
experimental/sample-configs/mpfr/: mpfr.sample
lib/: Stow.pm.in
lib/Stow/: Util.pm  Util.pm.in
t/: chkstow.t  cleanup_invalid_links.t  cli.t  cli_options.t  defer.t  dotfiles.t  examples.t  find_stowed_path.t  foldable.t  ignore.t  join_paths.t  link_dest_within_stow_dir.t  parent.t  rc_options.t  relative_path.t  relativepath.t  stow.t  stow_contents.t  testutil.pm  unstow.t  unstow_contents.t  unstow_contents_orig.t  unstow_orig.t  util.pm
tdw-experimental/: README  gnu-install  gnu.db  sql-gnu-populate
tdw-experimental/rails-stow/config/initializers/: session_store.rb
tdw-experimental/sample-configs/gcc/: sample-config.sh  stow.gcc-4.4.0.sh  stow.gcc.sh
tdw-experimental/sample-configs/mpfr/: mpfr.sample
tools/: get-version
